# ResumeParser

./: .env.example  .gitignore  LICENSE  MERGE.md  README.md  TESTING_GUIDE.md  check_openai.py  demo.py  parse_and_log.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  test_quick.py  test_real_resume.py
docs/: TESTING.md  implementation-playbook.md  object-oriented-design.md  requirements-verification.md
examples/: basic_usage.py  custom_extractor_example.py
src/resume_parser/: __init__.py  config.py  exceptions.py  models.py
src/resume_parser/core/: framework.py  resume_extractor.py
src/resume_parser/extractors/: base.py  email_extractor.py  name_extractor.py  skills_extractor.py
src/resume_parser/parsers/: base.py  pdf_parser.py  word_parser.py
src/resume_parser/utils/: logger.py  openai_check.py  parsing_logger.py
tests/: README.md  conftest.py
tests/integration/: test_comprehensive_resume_parsing.py  test_openai_connectivity.py  test_real_resume_parsing.py  test_setup_verification.py
tests/test_data/: data_scientist_resume.docx  multi_page_resume.docx  resume_with_tables.docx  sample_resume.docx  software_engineer_resume.docx
tests/unit/: test_models.py
tests/unit/test_core/: test_framework.py
tests/unit/test_extractors/: test_email_extractor.py  test_skills_extractor.py
