[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resume-parser-framework"
version = "1.0.0"
description = "A production-ready, AI-powered resume parsing framework"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["resume", "parser", "nlp", "gpt-4", "ai", "pdf", "word"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    # Core parsing libraries
    "pymupdf>=1.23.0",            # PDF text extraction (PyMuPDF)
    "python-docx>=1.1.0",         # Word document parsing
    
    # NLP for name extraction
    "spacy>=3.7.2",               # NER for name extraction
    # Note: Run 'uv pip install https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl' after install
    
    # LLM integration
    "openai>=1.30.0",             # GPT-4 API (Python 3.13 compatible)
    "tiktoken>=0.7.0",            # Token counting (Python 3.13 compatible)
    
    # Configuration & environment
    "python-dotenv>=1.0.0",       # Environment variable management
    "pydantic>=2.5.3",            # Data validation
    "pydantic-settings>=2.1.0",   # Settings management
    
    # Utilities
    "tenacity>=8.2.3",            # Retry logic for API calls
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",          # Coverage reporting
    "pytest-mock>=3.12.0",        # Mocking utilities
    "responses>=0.24.1",          # HTTP mocking for OpenAI API
    
    # Code quality
    "black>=23.12.1",             # Code formatting
    "flake8>=7.0.0",              # Linting
    "mypy>=1.8.0",                # Type checking
    "isort>=5.13.2",              # Import sorting
    
    # Development
    "ipython>=9.0.0",             # Interactive shell
]

[project.urls]
Homepage = "https://github.com/yourusername/resume-parser-framework"
Documentation = "https://github.com/yourusername/resume-parser-framework#readme"
Repository = "https://github.com/yourusername/resume-parser-framework"
Issues = "https://github.com/yourusername/resume-parser-framework/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
resume_parser = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--disable-warnings",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312", "py313"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/resume_parser"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

